# curveDNA

./: .cproject  .project  BasePair.cpp  BasePair.h  CMakeLists.txt  ParameterMap.cpp  ParameterMap.h  README.md  Sequence.cpp  Sequence.h  TheComputer.cpp  TheComputer.h  cl_args.h  example.mgl  example.pov  main.cpp  optionparser.h  sequence_example.txt  sequence_example.txt.bnd  sequence_example.txt.crv  sequence_example.txt.mgl  sequence_example.txt.pov
